--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.1.0'
     compile 'com.android.support:recyclerview-v7:24.1.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7', changing: true
     testCompile 'junit:junit:4.12'
 }
